--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,16 @@
     <name>Visualpathit VProfile Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
-        <spring.version>4.2.0.RELEASE</spring.version>
-        <spring-security.version>4.0.2.RELEASE</spring-security.version>
-        <spring-data-jpa.version>1.8.2.RELEASE</spring-data-jpa.version>
+        <spring.version>4.3.25.RELEASE</spring.version> <!-- Updated Spring -->
+        <spring-security.version>4.2.12.RELEASE</spring-security.version> <!-- Updated Spring Security -->
+        <spring-data-jpa.version>1.11.23.RELEASE</spring-data-jpa.version> <!-- Compatible Spring Data -->
         <hibernate.version>4.3.11.Final</hibernate.version>
-        <hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
-        <mysql-connector.version>5.1.36</mysql-connector.version>
-        <commons-dbcp.version>1.4</commons-dbcp.version>
+        <hibernate-validator.version>5.2.5.Final</hibernate-validator.version>
+        <mysql-connector.version>8.0.33</mysql-connector.version> <!-- Updated MySQL -->
+        <commons-dbcp.version>2.9.0</commons-dbcp.version> <!-- Updated commons-dbcp -->
         <jstl.version>1.2</jstl.version>
-        <junit.version>4.10</junit.version>
-        <logback.version>1.1.3</logback.version>
+        <junit.version>4.13.2</junit.version> <!-- Updated JUnit -->
+        <logback.version>1.2.10</logback.version> <!-- Updated Logback -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -71,7 +71,7 @@
         </dependency>
         <dependency>
             <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
+            <artifactId>commons-dbcp2</artifactId>
             <version>${commons-dbcp.version}</version>
         </dependency>
 
@@ -79,13 +79,19 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.1</version> <!-- Compatible with Servlet 4.0 -->
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+            <version>1.2.2</version>
         </dependency>
 
         <!-- Testing -->
@@ -98,7 +104,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.9.5</version>
+            <version>4.0.0</version> <!-- Updated Mockito -->
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -110,7 +116,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>2.2</version> <!-- Updated Hamcrest -->
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -121,7 +127,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.43.v20210629</version>  <!-- Updated to a more recent version -->
+                <version>11.0.14</version> <!-- Latest Jetty -->
                 <configuration>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
@@ -134,7 +140,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>  <!-- This is a good version -->
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -152,18 +158,11 @@
                 </executions>
             </plugin>
 
-            <!-- Update maven-war-plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>  <!-- Updated to a recent version -->
-            </plugin>
-
-            <!-- Updated Maven Compiler Plugin -->
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version> <!-- Latest stable version -->
+                <version>3.8.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
